fixed "lagaleria" button

--- a/welcome.html
+++ b/welcome.html
@@ -12,19 +12,18 @@
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="scripts/global.js" type="text/javascript"></script>
-
 </head>
 <body>
-   
     <div id="container">
-        <div id="transparent"  style="margin:0;>
+        <div id="transparent" style="margin: 0;">
             <div class="centerdiv">
                 <section style="padding-right: 20px;">
                     <h1>
                         ברוכים הבאים</h1>
                     <p>
                         אני זהר אגמון, מצטיינת מגמה לאומנות פלסטית בבית הספר תלמה ילין בעלת ניסיון רב בדיוקנאות
-                        וציורי קיר.<br>אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
+                        וציורי קיר.<br />
+                        אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
                     </p>
                 </section>
                 <br />
@@ -32,15 +31,17 @@
                     <div style="margin: 0 auto; width: 75%;">
                         <div>
                             <img src="images/1.jpg" class="im" style="vertical-align: top;" alt="image main; float:right;" />
-                            <span style="float: left" class="desctext">מציירת את עבודת הגמר המצטיינת במגמה הפלסטית בתיכון ׳תלמה ילין׳ לאומנויות</span>
+                            <span style="float: left" class="desctext">מציירת את עבודת הגמר המצטיינת במגמה הפלסטית
+                                בתיכון ׳תלמה ילין׳ לאומנויות</span>
                         </div>
                         <div style="margin-top: 50px; margin-bottom: 50px;">
                             <img src="images/2.jpg" style="vertical-align: top;" class="im" />
-                            <span style="float: left;" class="desctext">בפארק, מציירת משפחה מקריתבשדרות רוטשילד בת״א, מציירת פורטרט משפחתי בצבע בהזמנה לאירוע יום הולדת</span>
+                            <span style="float: left;" class="desctext">בפארק, מציירת משפחה מקריתבשדרות רוטשילד
+                                בת״א, מציירת פורטרט משפחתי בצבע בהזמנה לאירוע יום הולדת</span>
                         </div>
                         <div>
                             <p style="float: left; width: 100%; text-align: left;">
-                                <a href="#"   onclick="clearHeight('gallery.html');" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
+                                <a href="#" onclick="clearHeight('gallery.html');" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
                             </p>
                         </div>
                     </div>
@@ -48,6 +49,5 @@
             </div>
         </div>
     </div>
-  
 </body>
 </html>
