--- a/gallery.html
+++ b/gallery.html
@@ -4,12 +4,12 @@
     <title>Zohar Gallery</title>
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <link href="styles/gallery.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   
             <script src="scripts/global.js" type="text/javascript"></script>
-            <script>
+            <script type="text/javascript">
             	$(function()
             	{
             		parent.prepFancyBox();
