kztat hevrati iafe

--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,15 @@
             </div>
             <section>
 
-         <div class="fb-like-box" data-show-border="false" style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:550px;overflow:hidden;" data-href="https://www.facebook.com/zoharsgallery"
-                    data-width="650" data-colorscheme="light" data-show-faces="true" data-header="true"
-                    data-stream="true" data-show-border="true">
-                </div>
+        
             </section>
         </div>
-
+ <div class="fb-like-box" data-show-border="false" 
+ 		style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:550px;overflow:hidden;"
+  		data-href="https://www.facebook.com/zoharsgallery"
+        data-width="850" data-width="1650" data-colorscheme="light" data-show-faces="true" data-header="true"
+        data-stream="true" data-show-border="true">
+                </div>
 
     </div>
 </body>
