--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
                     <h1>
                         צור קשר</h1>
                     <p>
-                        לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028.
+                        לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028 או בעמוד הפייסבוק שלי
+     <a href="http://facebook.com/zoharsgallery" target="_blank">    <img alt="logo" src="images/facebook.png" style="vertical-align: top;height: 20px;width: 20px;target-name:new;target-new:tab;" />
+</a>
                     </p>
                 </section>
             </div>
