fixed to facebook button

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
             </div>
             <section>
 
-         <div class="fb-like-box" data-show-border="false" style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:550px;overflow:hidden;" data-href="https://www.facebook.com/zoharsgallery"
+         <div class="fb-like-box" data-show-border="false" style="margin-top:20px;overflow:hidden;text-align:center;display:block !important;height:563px;overflow:hidden;"
+          data-href="https://www.facebook.com/zoharsgallery" data-force-wall="true" force_wall="true" data-height="563px;"
                     data-width="650" data-colorscheme="light" data-show-faces="true" data-header="true"
                     data-stream="true" data-show-border="true">
                 </div>
