--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
                         צור קשר</h1>
                     <p>
                         לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028 או בעמוד הפייסבוק שלי
-     <a href="http://facebook.com/zoharsgallery" target="_blank">    <img alt="logo" src="images/facebook.png" style="vertical-align: top;height: 20px;width: 20px;target-name:new;target-new:tab;" />
-</a>
+     <a href="http://www.facebook.com/zoharsgallery" target="_blank">  
+       <img alt="logo" src="images/facebook.png" style="vertical-align: top;height: 20px;width: 20px;" /></a>
                     </p>
                 </section>
             </div>
@@ -30,9 +30,9 @@
             </section>
         </div>
  <div class="fb-like-box" data-show-border="false" 
- 		style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:550px;overflow:hidden;"
+ 		style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:600px;overflow:hidden;"
   		data-href="https://www.facebook.com/zoharsgallery"
-        data-width="850" data-width="1650" data-colorscheme="light" data-show-faces="true" data-header="true"
+        data-width="850" data-height="550" data-colorscheme="light" data-show-faces="true" data-header="true"
         data-stream="true" data-show-border="true">
                 </div>
 
