--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <li><a href="#?p=order.html" id="order" onclick="clearHeight('order.html');">הזמנת ציור</a></li>
             <li><a href="#?p=contact.html" onclick="clearHeight('contact.html');">צור קשר</a></li>
             <li><a href="#?p=faq.html" onclick="clearHeight('faq.html');">שאלות נפוצות</a></li>
+         	<li><a href="http://www.facebook.com/zoharsgallery" target="_blank"> 
+           		<img alt="logo" src="images/facebookWhite.png" style="vertical-align:top;height: 32px;width: 32px;" /></a></li>
         </ul>
     </div>
     <div id="logo">
@@ -47,20 +49,21 @@
     <div id="loaderWarp">
         <img alt="loading" src="images/loader.gif" style="vertical-align: top;" />
     </div>
-    <div class="social-media-buttons">
-        <span style="height: 29px !important; overflow: hidden;" class="fb-like" data-href="http://zohargallery.com/index.html"
-            data-width="200" data-layout="button" data-action="like" data-show-faces="false"
-            data-share="true"></span><span style="width: 250px; overflow: hidden;" class="g-plus"
-                data-action="share" data-height="30"></span><span style="vertical-align: top;"><a
-                    href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9"
-                    data-size="large"></a></span>
-    </div>
+
     <div id="container" style="width: 100%;">
         <frameset rows="100%">
             <frameset cols="100%">
                  <iframe id="iframe" name="iframe" style="display:none" allowtransparency="true" src="" frameborder="0"  height="100%" width="100%"></iframe>
             </frameset>
         </frameset>
+    </div>
+        <div class="social-media-buttons">
+        <span style="height: 29px !important; overflow: hidden;" class="fb-like" data-href="http://zohargallery.com/index.html"
+            data-width="200" data-layout="button" data-action="like" data-show-faces="false"
+            data-share="true"></span><span style="width: 250px; overflow: hidden;" class="g-plus"
+                data-action="share" data-height="30"></span><span style="vertical-align: top;"><a
+                    href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9"
+                    data-size="large"></a></span>
     </div>
     <footer id="footer" style="display: none;">
        Powered by lemon juice
