--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
         </frameset>
     </div>
         <div class="social-media-buttons">
-        <span style="height: 29px !important; overflow: hidden;" class="fb-like" data-href="http://zohargallery.com/index.html"
-            data-width="200" data-layout="button" data-action="like" data-show-faces="false"
-            data-share="true"></span><span style="width: 250px; overflow: hidden;" class="g-plus"
-                data-action="share" data-height="30"></span><span style="vertical-align: top;"><a
-                    href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9"
-                    data-size="large"></a></span>
+        	<span style="height: 29px !important; overflow: hidden;" class="fb-like" 
+        		data-href="http://zohargallery.com/index.html" data-width="200" 
+        		data-layout="button" data-action="like" data-show-faces="false" data-share="true"></span>
+            <span style="width: 250px; overflow: hidden;" class="g-plus"
+                data-action="share" data-height="30"></span>
+            <span style="vertical-align: top;"><a href="https://twitter.com/share" 
+            	class="twitter-share-button" data-via="omeriko_9" data-size="large"></a></span>
     </div>
     <footer id="footer" style="display: none;">
        Powered by lemon juice
