added some lemon juice

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </frameset>
     </div>
     <footer id="footer" style="display: none;">
-       Powered by lemon juice
+       Powered by <a id="lemonjuice" href="http://lemonjuice.omeriko9.com" >lemon juice</a>
     </footer>
     <script src="scripts/global.js" type="text/javascript"></script>
     <script src="scripts/index.js" type="text/javascript"></script>
