--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,9 @@
             </section>
         </div>
  <div class="fb-like-box" data-show-border="false" 
- 		style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:600px;overflow:hidden;"
+ 		style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:650px;overflow:hidden;"
   		data-href="https://www.facebook.com/zoharsgallery"
-        data-width="850" data-height="550" data-colorscheme="light" data-show-faces="true" data-header="true"
+        data-width="850" data-colorscheme="light" data-show-faces="true" data-header="true"
         data-stream="true" data-show-border="true">
                 </div>
 
