order from facebook

--- a/order.html
+++ b/order.html
@@ -22,7 +22,8 @@
                         <b>איך זה עובד?</b>
                         <br />
                         <ul style="list-style:circle;line-height: 30px;">
-                            <li>אתם שולחים בקשה ל zoharagmon@gmail.com עם הזמנה של הציור. נא לציין: תוכן הציור,
+                            <li>אתם שולחים בקשה ל  <a href="http://www.facebook.com/zoharsgallery" target="_blank">  
+       <img alt="logo" src="images/facebook.png" style="vertical-align: top;height: 20px;width: 20px;" /></a> או ל zoharagmon@gmail.com עם הזמנה של הציור. נא לציין: תוכן הציור,
                                 גודל הציור המבוקש, סגנון הציור (אקריליק על קנבס, עפרונות על בריסטול), בקשות מיוחדות,
                                 מועד ביצוע מבוקש וטלפון לבירורים. במידה ומדובר בדיוקן של בני אדם ו/או חיות מחמד,
                                 נא לצרף תמונות ברורות שלהם או קישור לתמונות שלהם. אפשר גם לשלוח הקדשה שתרצו שאני
