--- a/lemon/index.html
+++ b/lemon/index.html
@@ -9,8 +9,8 @@
 	<div>
 		<img alt="logo" src="ljicon.png" style="vertical-align:top;height: 120px;width: 400px;" /></div>
  	<iframe width="560" height="315" src="//www.youtube.com/embed/Bx44nNVmQ0Y?rel=0" frameborder="0" allowfullscreen></iframe>
-	<div id="logo">Lemon Juice</div>
-<div><a href="http://www.facebook.com" target="_blank"> 
-           		<img alt="logo" src="facebookBlack.png" style="vertical-align:top;height: 32px;width: 32px;" /></a></div>
+	
+<div id="fb"><a href="http://www.facebook.com/LemonJuiceWeb" target="_blank"> 
+           		<img alt="logo" src="facebookBlack.png" style="vertical-align:top;height: 64px;width: 64px;" /></a></div>
 </body>
 </html>
