--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,23 @@
                             </a><a href="images/gallery/g2-4.jpg" class="fancybox fancybox.iframe">                                           
                                 <img alt="preview image" id="Img12"  class="galleryimage" src="images/gallery/preview/g2-4.jpg" />
                             </a>
+                            <a href="images/gallery/g11-17.jpg" >
+                                <img alt="preview image" id="Img11-17" class="galleryimage"
+                                    src="images/gallery/preview/g11-17.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-18.jpg" >
+                                <img alt="preview image" id="Img11-18" class="galleryimage"
+                                    src="images/gallery/preview/g11-18.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-19.jpg" >
+                                <img alt="preview image" id="Img11-19" class="galleryimage"
+                                    src="images/gallery/preview/g11-19.jpg" />
+                            </a>
+                            <a href="images/gallery/g2-6.jpg" >
+                                <img alt="preview image" id="g2-6" class="galleryimage"
+                                    src="images/gallery/preview/g2-6.jpg" />
+                            </a>
+
                             <div class="imgtitle">
                                 בעלי חיים</div>
                             <hr />
@@ -93,6 +110,8 @@
                                 <img alt="preview image" id="Img3-4"  class="galleryimage" src="images/gallery/preview/g3-4.jpg" />
                             </a><a href="images/gallery/g3-5.jpg">
                                 <img alt="preview image" id="Img3-5"  class="galleryimage" src="images/gallery/preview/g3-5.jpg" />
+                            </a><a href="images/gallery/g3-6.jpg">
+                                <img alt="preview image" id="Img3-6"  class="galleryimage" src="images/gallery/preview/g3-6.jpg" />
                             </a>
                             <div class="imgtitle">
                                 משולב</div>
@@ -121,6 +140,10 @@
                               <a href="images/gallery/g5-3.jpg">
                                 <img alt="preview image" id="Img17"   class="galleryimage"
                                     src="images/gallery/preview/g5-3.jpg" />
+                            </a>
+                            <a href="images/gallery/g5-4.jpg" >
+                                <img alt="preview image" id="Img5-4" class="galleryimage"
+                                    src="images/gallery/preview/g5-4.jpg" />
                             </a>
 
 
@@ -243,18 +266,6 @@
                                 <img alt="preview image" id="Img11-16" class="galleryimage"
                                     src="images/gallery/preview/g11-16.jpg" />
                             </a>
-                            <a href="images/gallery/g11-17.jpg" >
-                                <img alt="preview image" id="Img11-17" class="galleryimage"
-                                    src="images/gallery/preview/g11-17.jpg" />
-                            </a>
-                            <a href="images/gallery/g11-18.jpg" >
-                                <img alt="preview image" id="Img11-18" class="galleryimage"
-                                    src="images/gallery/preview/g11-18.jpg" />
-                            </a>
-                            <a href="images/gallery/g11-19.jpg" >
-                                <img alt="preview image" id="Img11-19" class="galleryimage"
-                                    src="images/gallery/preview/g11-19.jpg" />
-                            </a>
                             <a href="images/gallery/g11-21.jpg" >
                                 <img alt="preview image" id="Img11-21" class="galleryimage"
                                     src="images/gallery/preview/g11-21.jpg" />
@@ -262,6 +273,10 @@
                             <a href="images/gallery/g11-22.jpg" >
                                 <img alt="preview image" id="Img11-22" class="galleryimage"
                                     src="images/gallery/preview/g11-22.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-23.jpg" >
+                                <img alt="preview image" id="Img11-23" class="galleryimage"
+                                    src="images/gallery/preview/g11-23.jpg" />
                             </a>
                         </div>
                         <div style="width:90%;text-align:left;margin-bottom:20px;margin-top:-20px;">
