--- a/welcome.html
+++ b/welcome.html
@@ -29,15 +29,18 @@
                 <br />
                 <section>
                     <div style="margin: 0 auto; width: 75%;">
+                        <div style="margin-top: 50px; margin-bottom: 50px;">
+                            <img src="images/2.jpg" style="vertical-align: top;" class="im" />
+                            <span style="float: left;" class="desctext">בשדרות רוטשילד בת״א, מציירת פורטרט משפחתי בצבע בהזמנה לאירוע יום הולדת</span>
+                        </div>
                         <div>
                             <img src="images/1.jpg" class="im" style="vertical-align: top;" alt="image main; float:right;" />
                             <span style="float: left" class="desctext">מציירת את עבודת הגמר המצטיינת במגמה הפלסטית
                                 בתיכון ׳תלמה ילין׳ לאומנויות</span>
                         </div>
                         <div style="margin-top: 50px; margin-bottom: 50px;">
-                            <img src="images/2.jpg" style="vertical-align: top;" class="im" />
-                            <span style="float: left;" class="desctext">בפארק, מציירת משפחה מקריתבשדרות רוטשילד
-                                בת״א, מציירת פורטרט משפחתי בצבע בהזמנה לאירוע יום הולדת</span>
+                            <img src="images/gallery/g6-2.jpg" style="vertical-align: top;" class="im" />
+                            <span style="float: left;" class="desctext">מציירת את החלק האחורי של הדוגמנית בתחרות- "גוף במקום קנבס" בציור שזכה במקום ראשון לשנת 2012</span>
                         </div>
                         <div>
                             <p style="float: left; width: 100%; text-align: left;">
