--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             	class="twitter-share-button" data-via="omeriko_9" data-size="large"></a></span>
     </div>
     <footer id="footer" style="display: none;">
-       Powered by <a id="lemonjuice" href="lemon" target="_blank" >lemon juice</a>
+       Powered by <a id="lemonjuice" href="http://lemonjuice.omeriko9.com" target="_blank" >lemon juice</a>
     </footer>
     <script src="scripts/global.js" type="text/javascript"></script>
     <script src="scripts/index.js" type="text/javascript"></script>
