--- a/gallery.html
+++ b/gallery.html
@@ -94,6 +94,12 @@
                             </a><a href="images/gallery/g9-5.jpg">
                                 <img alt="preview image" id="Img9-5"  class="galleryimage" src="images/gallery/preview/g9-5.jpg" />
                             </a>
+                            </a><a href="images/gallery/g9-6.jpg">
+                                <img alt="preview image" id="Img9-6"  class="galleryimage" src="images/gallery/preview/g9-6.jpg" />
+                            </a>
+                            </a><a href="images/gallery/g9-7.jpg">
+                                <img alt="preview image" id="Img9-7"  class="galleryimage" src="images/gallery/preview/g9-7.jpg" />
+                            </a>
 
 
                             <div class="imgtitle">
@@ -171,6 +177,10 @@
                             <a href="images/gallery/g7-2.jpg" >
                                 <img alt="preview image" id="Img16"  class="galleryimage"
                                     src="images/gallery/preview/g7-2.jpg" />
+                            </a>
+                            <a href="images/gallery/g7-3.jpg" >
+                                <img alt="preview image" id="Img7-3"  class="galleryimage"
+                                    src="images/gallery/preview/g7-3.jpg" />
                             </a>
 
                             <div class="imgtitle">
@@ -277,6 +287,18 @@
                             <a href="images/gallery/g11-23.jpg" >
                                 <img alt="preview image" id="Img11-23" class="galleryimage"
                                     src="images/gallery/preview/g11-23.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-24.jpg" >
+                                <img alt="preview image" id="Img11-24" class="galleryimage"
+                                    src="images/gallery/preview/g11-24.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-25.jpg" >
+                                <img alt="preview image" id="Img11-25" class="galleryimage"
+                                    src="images/gallery/preview/g11-25.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-26.jpg" >
+                                <img alt="preview image" id="Img11-26" class="galleryimage"
+                                    src="images/gallery/preview/g11-26.jpg" />
                             </a>
                         </div>
                         <div style="width:90%;text-align:left;margin-bottom:20px;margin-top:-20px;">
