added purchasing of painting and the paintings

--- a/order.html
+++ b/order.html
@@ -1,40 +1,150 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Zohar Gallery</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="styles/order.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-        <script src="scripts/global.js" type="text/javascript"></script>
+    <script src="scripts/global.js" type="text/javascript"></script>
 
 </head>
 <body>
-   
+
 
     <div id="container">
-        <div id="transparent"  style="margin:0;>
+        <div id="transparent" style="margin:0;">
             <div class="centerdiv">
+                <article>
+                    <p>אני מציעה שתי אפשרויות לרכישת ציורים:</p>
+                    <nav>
+                        <ul style="line-height:30px">
+                            <li>
+                                <a href="#order_existing" style="text-decoration:none; color:#000;">רכישת ציור קיים שציירתי ואהבת</a>
+                            </li>
+                            <li>
+                                <a href="#order_new" style="text-decoration:none; color:#000;">הזמנת ציור חדש מותאם אישית לך</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </article>
+               
                 <section style="padding-right: 20px;">
                     <h1>
-                        הזמנת ציור</h1>
+                        <a style="text-decoration:none;" id="order_existing"></a>
+                        רכישת ציור קיים
+                    </h1>
+                    <p style="line-height: 30px;">
+                        <b>מגוון הציורים שכרגע אני מציעה לרכישה:</b>
+                    </p>
+                    <br />
+                    <div class="display_paintings">
+                        <div>
+                            <img src="images/purchase/g1-4.jpg" />
+                            <span class="painting_name">&quot;יונק הדבש&quot;</span>
+                            <span class="painting_price">מחיר: 300 ₪</span>
+                            <span>מידות: 50 על 50 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+
+                        </div>
+                        <div>
+                            <img src="images/purchase/g5-1.jpg" />
+                            <span class="painting_name">&quot;הקצה הצפוני&quot;</span>
+                            <span class="painting_price">מחיר: 650 ₪</span>
+                            <span>מידות: 60 על 50 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/g5-2.jpg" />
+                            <span class="painting_name">&quot;משב אוויר חם&quot;</span>
+                            <span class="painting_price">מחיר: 650 ₪</span>
+                            <span>מידות: 30 על 30 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/g5-4.jpg" />
+                            <span class="painting_name">&quot;רגע רוחני&quot;</span>
+                            <span class="painting_price">מחיר: 1000 ₪</span>
+                            <span>מידות: 60 על 70 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/g9-6.jpg" />
+                            <span class="painting_name">&quot;התייעצות&quot;</span>
+                            <span class="painting_price">מחיר: 700 ₪</span>
+                            <span>מידות: 80 על 60 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/g9-3.jpg" />
+                            <span class="painting_name">&quot;בדהרה&quot;</span>
+                            <span class="painting_price">מחיר: 650 ₪</span>
+                            <span>מידות: 50 על 70 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/g5-7.jpg" />
+                            <span class="painting_name">&quot;בין ערביים&quot;</span>
+                            <span class="painting_price">מחיר: 350 ₪</span>
+                            <span>מידות: 35 על 25 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/IMG_2047.jpg" />
+                            <span class="painting_name">&quot;ריח של גשם&quot;</span>
+                            <span class="painting_price">מחיר: 450 ₪</span>
+                            <span>מידות: 40 על 30 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/IMG_2063.jpg" />
+                            <span class="painting_name">&quot;פרפר&quot;</span>
+                            <span class="painting_price">מחיר: 500 ₪</span>
+                            <span>מידות: 60 על 40 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+                        <div>
+                            <img src="images/purchase/IMG_2067.jpg" />
+                            <span class="painting_name">&quot;שעון חוף&quot;</span>
+                            <span class="painting_price">מחיר: 1500 ₪</span>
+                            <span>מידות: 100 על 30 סנטימטר</span>
+                            <span>חומרים: קנבס, אקריליק</span>
+                        </div>
+
+                    </div>
+                </section>
+
+                <section style="padding-right: 20px;">
+                    <h1>
+                        <a style="text-decoration:none;" id="order_new"></a>
+                        הזמנת ציור חדש
+                    </h1>
                     <p style="line-height: 30px;">
                         <b>איך זה עובד?</b>
                         <br />
                         <ul style="list-style:circle;line-height: 30px;">
-                            <li>אתם שולחים בקשה ל  <a href="http://www.facebook.com/zoharsgallery" target="_blank">  
-       <img alt="logo" src="images/facebook.png" style="vertical-align: top;height: 20px;width: 20px;" /></a> או ל zoharagmon@gmail.com עם הזמנה של הציור. נא לציין: תוכן הציור,
+                            <li>
+                                אתם שולחים בקשה ל  <a href="http://www.facebook.com/zoharsgallery" target="_blank">
+                                    <img alt="logo" src="images/facebook.png" style="vertical-align: top;height: 20px;width: 20px;" />
+                                </a> או ל zoharagmon@gmail.com עם הזמנה של הציור. נא לציין: תוכן הציור,
                                 גודל הציור המבוקש, סגנון הציור (אקריליק על קנבס, עפרונות על בריסטול), בקשות מיוחדות,
                                 מועד ביצוע מבוקש וטלפון לבירורים. במידה ומדובר בדיוקן של בני אדם ו/או חיות מחמד,
                                 נא לצרף תמונות ברורות שלהם או קישור לתמונות שלהם. אפשר גם לשלוח הקדשה שתרצו שאני
                                 אכתוב בתמונה.<br />
-                                 ניתן להתקשר לייעוץ חינם בטלפון 050-5100028. </li>
+                                ניתן להתקשר לייעוץ חינם בטלפון 050-5100028.
+                            </li>
                             <li>אני חוזרת אליכם עם הצעת מחיר. </li>
-                            <li>במידה והצעת המחיר מקובלת עליכם, אתם מעבירים מקדמה בסך 25% ממחיר הציור, ואני מתחילה
-                                לעבוד. </li>
-                            <li>תוך כדי העבודה אני שולחת לכם תמונה אחת או יותר של הציור, לקבלת הערות, הצעות או
-                                תיקונים. </li>
-                            <li>כאשר הציור מוכן אנחנו נפגשים, אני מעבירה לכם את הציור ואתם מעבירים את שארית המחיר.
+                            <li>
+                                במידה והצעת המחיר מקובלת עליכם, אתם מעבירים מקדמה בסך 25% ממחיר הציור, ואני מתחילה
+                                לעבוד.
+                            </li>
+                            <li>
+                                תוך כדי העבודה אני שולחת לכם תמונה אחת או יותר של הציור, לקבלת הערות, הצעות או
+                                תיקונים.
+                            </li>
+                            <li>
+                                כאשר הציור מוכן אנחנו נפגשים, אני מעבירה לכם את הציור ואתם מעבירים את שארית המחיר.
                             </li>
                         </ul>
                     </p>
@@ -42,6 +152,6 @@
             </div>
         </div>
     </div>
-  
+
 </body>
 </html>
