--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
    
 
     <div id="container">
-        <div id="transparent"  style="margin:0;>
+        <div id="transparent"  style="margin:0;">
             <div class="centerdiv">
                 <section style="padding-right: 20px;">
                     <h1>
