--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" id="mainHtml">
 <head>
     <title>Zohar Agmon's Gallery</title>
@@ -22,10 +22,11 @@
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="scripts/fancybox/jquery.fancybox-1.3.4.css"
-        media="screen" />
+          media="screen" />
     <link rel="shortcut icon" href="images/favicon.ico" />
     <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="scripts/jquery.colors/jquery.color.js" type="text/javascript"></script>
     <script type="text/javascript" src="scripts/fancybox/jquery.fancybox-1.3.4.js"></script>
     <script src="scripts/social.js" type="text/javascript"></script>
 </head>
@@ -36,11 +37,14 @@
         <ul class="scroller_anchor">
             <li><a href="#?p=welcome.html" onclick="clearHeight('welcome.html');">ברוכים הבאים</a></li>
             <li><a href="#?p=gallery.html" onclick="clearHeight('gallery.html');">גלריה</a></li>
-            <li><a href="#?p=order.html" id="order" onclick="clearHeight('order.html');">הזמנת ציור</a></li>
+            <li><a href="#?p=order.html" id="order" onclick="clearHeight('order.html');">רכישת ציור</a></li>
             <li><a href="#?p=contact.html" onclick="clearHeight('contact.html');">צור קשר</a></li>
             <li><a href="#?p=faq.html" onclick="clearHeight('faq.html');">שאלות נפוצות</a></li>
-         	<li><a href="http://www.facebook.com/zoharsgallery" target="_blank"> 
-           		<img alt="logo" src="images/facebookWhite.png" style="vertical-align:top;height: 32px;width: 32px;" /></a></li>
+            <li>
+                <a href="http://www.facebook.com/zoharsgallery" target="_blank">
+                    <img alt="logo" src="images/facebookWhite.png" style="vertical-align:top;height: 32px;width: 32px;" />
+                </a>
+            </li>
         </ul>
     </div>
     <div id="logo">
@@ -53,21 +57,23 @@
     <div id="container" style="width: 100%;">
         <frameset rows="100%">
             <frameset cols="100%">
-                 <iframe id="iframe" name="iframe" style="display:none" allowtransparency="true" src="" frameborder="0"  height="100%" width="100%"></iframe>
+                <iframe id="iframe" name="iframe" style="display:none" allowtransparency="true" src="" frameborder="0" height="100%" width="100%"></iframe>
             </frameset>
         </frameset>
     </div>
-        <div class="social-media-buttons">
-        	<span style="height: 29px !important; overflow: hidden;" class="fb-like" 
-        		data-href="http://zohargallery.com/index.html" data-width="200" 
-        		data-layout="button" data-action="like" data-show-faces="false" data-share="true"></span>
-            <span style="width: 250px; overflow: hidden;" class="g-plus"
-                data-action="share" data-height="30"></span>
-            <span style="vertical-align: top;"><a href="https://twitter.com/share" 
-            	class="twitter-share-button" data-via="omeriko_9" data-size="large"></a></span>
+    <div class="social-media-buttons">
+        <span id="facebook_span" style="height: auto !important; overflow: hidden;" class="fb-like"
+              data-href="http://zohargallery.com/index.html" data-width="200"
+              data-layout="button" data-action="like" data-show-faces="false" data-share="true"></span>
+        <span style="width: 250px; overflow: hidden;" class="g-plus"
+              data-action="share" data-height="30"></span>
+        <span style="vertical-align: top;">
+            <a href="https://twitter.com/share"
+               class="twitter-share-button" data-via="omeriko_9" data-size="large"></a>
+        </span>
     </div>
     <footer id="footer" style="display: none;">
-       Powered by <a id="lemonjuice" href="http://lemonjuice.omeriko9.com" target="_blank" >lemon juice</a>
+        Powered by <a id="lemonjuice" href="http://lemonjuice.omeriko9.com" target="_blank">lemon juice</a>
     </footer>
     <script src="scripts/global.js" type="text/javascript"></script>
     <script src="scripts/index.js" type="text/javascript"></script>
