added paypal button + missing images

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
    
 
     <div id="container">
-        <div id="transparent"  style="margin:0;">
+        <div id="transparent"  style="margin:0;>
             <div class="centerdiv">
                 <section style="padding-right: 20px;">
                     <h1>
@@ -35,6 +35,28 @@
                             <div >
                             דיוקן יחיד/זוגי/קבוצתי כרצונכם - בצבע או בעפרון.
                             </div>
+							<a href="images/gallery/g2-8.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-8"  class="galleryimage" src="images/gallery/preview/g2-8.jpg" />
+							<a href="images/gallery/g2-14.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-14"  class="galleryimage" src="images/gallery/preview/g2-14.jpg" />
+							<a href="images/gallery/g2-7.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-7"  class="galleryimage" src="images/gallery/preview/g2-7.jpg" />
+                            </a>
+							<a href="images/gallery/g2-9.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-9"  class="galleryimage" src="images/gallery/preview/g2-9.jpg" />
+                            </a>
+							<a href="images/gallery/g2-10.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-10"  class="galleryimage" src="images/gallery/preview/g2-10.jpg" />
+                            </a>
+							<a href="images/gallery/g2-13.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-13"  class="galleryimage" src="images/gallery/preview/g2-13.jpg" />
+                            </a>
+							<a href="images/gallery/g2-11.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-11"  class="galleryimage" src="images/gallery/preview/g2-11.jpg" />
+                            </a>
+							<a href="images/gallery/g2-12.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img2-12"  class="galleryimage" src="images/gallery/preview/g2-12.jpg" />
+                            </a>
 							<a href="images/gallery/g2-5.jpg"  class="fancybox fancybox.iframe">
                                 <img alt="preview image" id="Img2-5"  class="galleryimage" src="images/gallery/preview/g2-5.jpg" />
                             </a>
@@ -75,6 +97,11 @@
                                     <img alt="preview image" id="Img3"  class="galleryimage" src="images/gallery/preview/g1-2.jpg" />
                                 </a><a href="images/gallery/g1-3.jpg">                                           
                                     <img alt="preview image" id="Img9"  class="galleryimage" src="images/gallery/preview/g1-3.jpg" />
+                                </a><a href="images/gallery/g1-4.jpg">                                           
+                                    <img alt="preview image" id="Img1-4"  class="galleryimage" src="images/gallery/preview/g1-4.jpg" />
+                                </a>
+								</a><a href="images/gallery/g1-5.jpg">                                           
+                                    <img alt="preview image" id="Img1-5"  class="galleryimage" src="images/gallery/preview/g1-5.jpg" />
                                 </a>
                             </div>
 
@@ -119,6 +146,9 @@
                             </a><a href="images/gallery/g3-6.jpg">
                                 <img alt="preview image" id="Img3-6"  class="galleryimage" src="images/gallery/preview/g3-6.jpg" />
                             </a>
+                            </a><a href="images/gallery/g3-7.jpg">
+                                <img alt="preview image" id="Img3-7"  class="galleryimage" src="images/gallery/preview/g3-7.jpg" />
+                            </a>
                             <div class="imgtitle">
                                 משולב</div>
                             <hr />
@@ -128,11 +158,19 @@
                             <a href="images/gallery/g4-1.jpg">
                                 <img alt="preview image" id="Img4"  class="galleryimage" src="images/gallery/preview/g4-1.jpg" />
                             </a>
+                            <a href="images/gallery/g4-2.jpg">
+                                <img alt="preview image" id="Img4-1"  class="galleryimage" src="images/gallery/preview/g4-2.jpg" />
+                            </a>
 
                             <div class="imgtitle">
                                 נוף</div>
                             <hr />
                             <div >תמונת נוף מרהיבה תוסיף המון לביתכם - בין אם זה נוף דמיוני או ריאליסטי</div>
+							<a href="images/gallery/g5-9.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img5-9"  class="galleryimage" src="images/gallery/preview/g5-9.jpg" />
+							<a href="images/gallery/g5-10.jpg"  class="fancybox fancybox.iframe">
+                                <img alt="preview image" id="Img5-10"  class="galleryimage" src="images/gallery/preview/g5-10.jpg" />
+
                             <a href="images/gallery/g5-1.jpg" >
                                 <img alt="preview image" id="Img5"   class="galleryimage"
                                     src="images/gallery/preview/g5-1.jpg" />
@@ -151,8 +189,22 @@
                                 <img alt="preview image" id="Img5-4" class="galleryimage"
                                     src="images/gallery/preview/g5-4.jpg" />
                             </a>
-
-
+                            <a href="images/gallery/g5-5.jpg" >
+                                <img alt="preview image" id="Img5-5" class="galleryimage"
+                                    src="images/gallery/preview/g5-5.jpg" />
+                            </a>
+                            <a href="images/gallery/g5-6.jpg" >
+                                <img alt="preview image" id="Img5-6" class="galleryimage"
+                                    src="images/gallery/preview/g5-6.jpg" />
+                            </a>                           
+							<a href="images/gallery/g5-7.jpg" >
+                                <img alt="preview image" id="Img5-7" class="galleryimage"
+                                    src="images/gallery/preview/g5-7.jpg" />
+                            </a>                            
+							<a href="images/gallery/g5-8.jpg" >
+                                <img alt="preview image" id="Img5-8" class="galleryimage"
+                                    src="images/gallery/preview/g5-8.jpg" />
+                            </a>
                             <div class="imgtitle">
                                 ציורי גוף</div>
                             <hr />
